--- a/style/style.css
+++ b/style/style.css
@@ -52,7 +52,8 @@ th, td {
     text-align: center;
     border: 1px solid black;
     width: 45vw;
-    padding: 5px 0px;
+    padding: 8px 0px;
+    max-width: 150px;
 }
 
 form > h1 {
