--- a/style/mobile.css
+++ b/style/mobile.css
@@ -46,5 +46,6 @@ section#secao-pacientes > table {
 section#secao-pacientes > table th, td {
     border: 1px solid black;
     text-align: center;
-    padding: 5px 2px;
+    padding: 5px;
+    width: 20px;
 }
