--- a/style/mobile.css
+++ b/style/mobile.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    background-color: aquamarine;
     height: 100vh;
     width: 100vw;
     position: relative;
@@ -46,6 +47,6 @@ section#secao-pacientes > table {
 section#secao-pacientes > table th, td {
     border: 1px solid black;
     text-align: center;
-    padding: 5px;
+    padding: 5px 2px;
     width: 20px;
 }
