--- a/style/mobile.css
+++ b/style/mobile.css
@@ -7,10 +7,10 @@
 }
 
 body {
-    background-color: aquamarine;
     height: 100vh;
     width: 100vw;
     position: relative;
+    background-color: darkkhaki;
 }
 
 header {
@@ -34,6 +34,7 @@ section#secao-pacientes {
 section#secao-pacientes > h2 {
     text-align: center;
     font-size: 1.2em;
+    border-bottom: 1px solid black;
 }
 
 section#secao-pacientes > section#filtro-paciente {
@@ -47,6 +48,6 @@ section#secao-pacientes > table {
 section#secao-pacientes > table th, td {
     border: 1px solid black;
     text-align: center;
-    padding: 5px 2px;
+    padding: 5px 0px;
     width: 20px;
 }
