--- a/style/mobile.css
+++ b/style/mobile.css
@@ -7,10 +7,12 @@
 }
 
 body {
+    color: rgb(53, 28, 28);
+
     height: 100vh;
     width: 100vw;
+    min-height: 650px;
     position: relative;
-    background-color: darkkhaki;
 }
 
 header {
@@ -23,11 +25,11 @@ header {
 }
 
 section#secao-pacientes {
-    padding: 20px;
+    font-variant: small-caps;
 
     position: absolute;
     left: 50%;
-    top: 7%;
+    top: 9%;
     transform: translateX(-50%);
 }
 
@@ -43,6 +45,7 @@ section#secao-pacientes > section#filtro-paciente {
 
 section#secao-pacientes > table {
     border-collapse: collapse;
+    font-variant: normal;
 }
 
 section#secao-pacientes > table th, td {
@@ -50,4 +53,70 @@ section#secao-pacientes > table th, td {
     text-align: center;
     padding: 5px 0px;
     width: 20px;
+}
+
+section#form-paciente {
+    width: 359.906px;
+    position: absolute;
+    left: 50%;
+    top: calc(100% - 50vh);
+    transform: translateX(-50%);
+}
+
+form {
+    font-variant: small-caps;
+}
+
+form > h1 {
+    font-size: 1.95em;
+}
+
+form > input {
+    margin-bottom: 10px;
+}
+
+form > button {
+    background-color: white;
+    padding: 8px;
+    width: 175px;
+    border: 1px solid rgba(255, 0, 0, 0.527);
+    border-radius: 5px;
+    box-shadow: 2px 2px 0px rgb(0, 0, 0, 0.438);
+    cursor: pointer;
+
+    transition: .2s;
+}
+
+form > button:hover {
+    background-color: rgb(240, 128, 128, 0.400);
+}
+
+input[type=text] {
+    height: 20px;
+    padding: 2px;
+    background-color: rgb(240, 128, 128, 0.400);
+    border-radius: 5px;
+    border: none;
+    box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.438);
+    outline: none;
+}
+
+input[type=text]:focus {
+    background-color: white;
+}
+
+.mensagem-erro {
+    color: red;
+    list-style-type: none;
+    font-variant: normal;
+}
+
+.paciente-invalido {
+    background-color: lightcoral;
+    font-weight: bolder;
+}
+
+.clickBtn {
+    box-shadow: none;
+    border: none;
 }
